--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "zapp"
 description = "Rust Serverless Framework"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Fumitake Kawasaki <f.kawasaki@elsoul.nl>"]
 edition = "2021"
 license = "Apache-2.0"
+keywords = ["Rust", "Serverless", "GraphQL", "Async", "PostgreSQL", "GCP", "API", "Framework"]
 
 [[bin]]
 name = "zapp"
