--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "zapp"
 description = "Rust Serverless Framework"
-version = "0.4.5"
+version = "0.4.6"
 authors = ["Fumitake Kawasaki <f.kawasaki@elsoul.nl>"]
 edition = "2021"
 license = "Apache-2.0"
@@ -23,3 +23,4 @@ console = "0.15.0"
 regex = "1.5.6"
 chrono = "0.4"
 convert_case = "0.5.0"
+spinners = "4.0.0"
