--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,6 @@ regex = "1.5.6"
 chrono = "0.4"
 convert_case = "0.5.0"
 spinners = "4.0.0"
+quote = "1.0.20"
+syn = "1.0.98"
+prettyplease = "0.1.16"
